style: add property to react reveal to avoid overlaping

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,3 +49,7 @@
     height: 4px;             
     
   }
+
+  .react-reveal{
+    animation-fill-mode: backwards !important;
+  }
